kub/home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home
  name: home
  labels:
    app: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
        - name: home
          image: registry.hub.docker.com/vyrtualsynthese/home:multi-arch-latest
          ports:
            - name: web
              containerPort: 80
