kub/home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: home
spec:
  ports:
    - port: 80
      targetPort: web
  selector:
    app: home
