kub/home/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: home
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/`) || Host(`home.local`)
    kind: Rule
    services:
    - name: home
      port: 80
